--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <div class="overbox">
+    <div class="overbox-title">
         <h1 class="gradient-text" >Decker Ayers</h1>
 
     </div>
     <div class="overbox">
 
         <h1 class="gradient-text">About Me</h1>
-        <p class="gradient-text">Slfhrlhflhsfjsehfezjkfhskjfshefkjedhfsdf;lfsfkejlfsejfslkkjeshfjksefhsekjfhsejk</p>
+        
     </div>
 
 
