--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="overbox-title">
-        <h1 class="gradient-text" style="font-size: 60px;" >Decker Ayers</h1>
+        <h1 class="gradient-text">Decker Ayers</h1>
 
     </div>
     <div class="overbox">
