Done For Tonight

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="overbox-title">
+    <div class="overbox">
         <h1 class="gradient-text">Decker Ayers</h1>
 
     </div>
