--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="overbox">
-        <h1 class="gradient-text">Decker Ayers</h1>
+        <h1 class="gradient-text">Decker Ayers<span style="align-content: end;">Mobile Developer</span></h1>
+
 
     </div>
     <div class="overbox">
