--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <head>
 <title>Decker Ayers</title>
 <meta name="description" content="My personal website portfolio">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="overbox">
-        <h1 class="gradient-text">Decker Ayers<span style="align-content: end;">Mobile Developer</span></h1>
+        <h1 class="gradient-text">Decker Ayers<span style="text-align: right;">Mobile Developer</span></h1>
 
 
     </div>
