--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="overbox">
-        <h1 class="gradient-text">Decker Ayers<span style="text-align: right;">Mobile Developer</span></h1>
-
+        <h1 class="gradient-text" style="float: left;">Decker Ayers</h1>
+        <h1 class="gradient-text" style="float: right;">Mobile Developer</span>
 
     </div>
-    <div class="overbox">
+    <div class="overbox" style="clear: both;">
         <nav>
 
             <ul>
