--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="overbox">
-        <h1 class="gradient-text" style="float: left;">Decker Ayers</h1>
-        <h1 class="gradient-text" style="float: right;">Mobile Developer</span>
+        <h1 class="gradient-text" style="float: left; margin-left: 5%;">Decker Ayers</h1>
+        <h1 class="gradient-text" style="float: right; margin-right: 5%;">Mobile Developer</span>
 
     </div>
     <div class="overbox" style="clear: both;">
