--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 </head>
 
 <body>
-    <div class="overbox">
-        <h1 class="gradient-text" style="float: left; margin-left: 5%;">Decker Ayers</h1>
-        <h1 class="gradient-text" style="float: right; margin-right: 5%;">Mobile Developer</span>
+    <div class="overbox" style="display: grid; column-gap: 5px; grid-template-columns: auto auto; grid-template-rows: auto;">
+        <h1 class="gradient-text" style="grid-column: 1; grid-row: 1; text-align: center;">Decker Ayers</h1>
+        <h1 class="gradient-text-reverse" style="grid-column: 2; grid-row: 1; text-align: center;">Mobile Developer</span>
+       
+        </div>
 
-    </div>
-    <div class="overbox" style="clear: both;">
+    <div class="overbox">
         <nav>
 
             <ul>
-
-                <li><a href="index.html">Home</a></li>
-
-                <li><a href="about.html">About</a></li>
-
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="gradient-text" href="index.html"   style="grid-column: 1;">Home</a></li>
+                <li><a class="gradient-text" href="about.html"   style="grid-column: 2;">About</a></li>
+                <li><a class="gradient-text-reverse" href="contact.html" style="grid-column: 3;">Contact</a></li>
 
             </ul>
 
         </nav>
+    </div>
 
 
 
