--- a/index.html
+++ b/index.html
@@ -1,49 +1,15 @@
-<!-- Decker Ayers / March 2023 -->
-
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Decker Ayers</title>
-<meta name="description" content="My personal website portfolio">
-<link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Decker Ayers</title>
 </head>
-
 <body>
-    <div class="overbox" style="display: grid; column-gap: 5px; grid-template-columns: auto auto; grid-template-rows: auto;">
-        <h1 class="gradient-text" style="grid-column: 1; grid-row: 1; text-align: center;">Decker Ayers</h1>
-        <h1 class="gradient-text-reverse" style="grid-column: 2; grid-row: 1; text-align: center;">Mobile Developer</span>
-       
-        </div>
-
-    <div class="overbox">
-        <nav>
-
-            <ul>
-                <li><a class="gradient-text" href="index.html"   style="grid-column: 1;">Home</a></li>
-                <li><a class="gradient-text" href="about.html"   style="grid-column: 2;">About</a></li>
-                <li><a class="gradient-text-reverse" href="contact.html" style="grid-column: 3;">Contact</a></li>
-
-            </ul>
-
-        </nav>
+    <div class="container">
+        <h1 id="name">Decker Ayers</h1>
     </div>
-
-
-
-
-
-
-
+    <script src="script.js"></script>
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
