--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <div class="container">
         <h1 id="name">Decker Ayers</h1>
     </div>
+    <section class="blog-section">
+        <div class="blog-post">
+            <h2>Blog Post Title 1</h2>
+            <p>This is the content of the first blog post...</p>
+        </div>
+        <div class="blog-post">
+            <h2>Blog Post Title 2</h2>
+            <p>This is the content of the second blog post...</p>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
