--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     </div>
     <section class="blog-section">
         <div class="blog-post">
-            <h2>Blog Post Title 1</h2>
-            <p>This is the content of the first blog post...</p>
+            <h2>Github</h2>
+            <p>This is where you can find all of my code projects</p>
         </div>
         <div class="blog-post">
-            <h2>Blog Post Title 2</h2>
-            <p>This is the content of the second blog post...</p>
+            <h2>About Me</h2>
+            <p>Find out more information about who I am in my off time</p>
+        </div>
+        <div class="blog-post">
+            <h2>Download Resume</h2>
+            <p>Will automatically start download when clicked</p>
+        </div>
+        <div class="blog-post">
+            <h2>Contact Me</h2>
+            <p>Find out how to get in touch with me</p>
         </div>
     </section>
     <script src="script.js"></script>
