--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
         <div class="blog-post">
             <h2>Github</h2>
             <p>This is where you can find all of my code projects</p>
+            <button class="read-button">&#8250;</button>
         </div>
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am in my off time</p>
+            <button class="read-button">&#8250;</button>
         </div>
         <div class="blog-post">
             <h2>Download Resume</h2>
             <p>Will automatically start download when clicked</p>
+            <button class="read-button">&#8250;</button>
         </div>
         <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
+            <button class="read-button">&#8250;</button>
         </div>
     </section>
     <script src="script.js"></script>
