--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am in my off time</p>
-            <a href="https://www.example.com"><button class="read-button">&#8250;</button></a>
+            <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
             <h2>Download Resume</h2>
