--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am in my off time</p>
-            <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
+            <a href="about.html"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
             <h2>Download Resume</h2>
-            <p>Will automatically start download when clicked</p>
-            <a href="https://www.example.com"><button class="read-button">&#8250;</button></a>
+            <p>Will automatically open document when clicked</p>
+            <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
-            <a href="https://www.example.com"><button class="read-button">&#8250;</button></a>
+            <a href="contact.html"><button class="read-button">&#8250;</button></a>
         </div>
     </section>
     <script src="script.js"></script>
