--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,16 @@
             <h2>Contact Form</h2>
             <form
                 action="https://formspree.io/f/xyyqepya"
-                method="POST"
-            >
+                method="POST">
                 <label>
                     Your email:
                     <input type="email" name="email">
                 </label>
                 <label>
                     Your message:
-                <textarea name="message"></textarea>
+                    <textarea name="message"></textarea>
                 </label>
-                <button type="submit">Send</button>
+                <button class="submit-button" type="submit">Send</button>
             </form>
         </div>
     </section>
