--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="back-button">
+            <a href="index.html">Back</a>
+        </div>
         <h1 id="name">About Me</h1>
     </div>
     <section class="about-section">
