--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </div>
     <section class="contact-section">
         <div class="contact-form">
-            <h2>Contact Form</h2>
+            <h2>Send a Message</h2>
             <form
                 action="https://formspree.io/f/xyyqepya"
                 method="POST">
