--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
+            <iframe src="https://ayersdecker.github.io/FlappyTiger-Embed"
+            style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; border: none;">
+        </div>
+        <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
             <a href="contact.html"><button class="read-button">&#8250;</button></a>
