--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
-            <iframe src="https://ayersdecker.github.io/FlappyTiger-Embed"
-            style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; border: none;">
+            <h2>Games</h2>
+            <p>Play some games I've made on Unity</p>
+            <a href="games.html"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
             <h2>Contact Me</h2>
