--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="blog-post">
             <h2>Download Resume</h2>
             <p>Will automatically open document when clicked</p>
-            <a href="assets/files/Decker Ayers Resume.pdf"><button class="read-button">&#8250;</button></a>
+            <a href="assets/files/Decker Ayers Resume.docx"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
             <h2>Games</h2>
