--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <a href="about.html"><button class="read-button">&#8250;</button></a>
         </div>
         <div class="blog-post">
-            <h2>Download Resume</h2>
-            <p>Will automatically open document when clicked</p>
+            <h2>Resume</h2>
+            <p>Most recent resume highlighting my education, skills, and expirience</p>
             <a href="assets/files/Decker Ayers Resume.docx"><button class="read-button">Download</button></a>
         </div>
         <div class="blog-post">
             <h2>Contact Me</h2>
-            <p>Find out how to get in touch with me</p>
-            <a href="contact.html"><button class="read-button">&#8250;</button></a>
+            <p>Find out how to get in touch with me
+            <a href="contact.html"><button class="read-button">&#8250;</button></a></p>
         </div>
     </section>
 </body>
