--- a/about.html
+++ b/about.html
@@ -14,11 +14,17 @@
         
         <div class="blog-post">
             
-            <h2>Hello!</h2>
-            <p><span class="tab"></span>My name is Decker Ayers. I am 24 years old, and a software developer from Owego, NY. I spend most of my time either hanging out with my kids, working on various programming projects, gaming, or riding my motorcycle around back roads. As a kid, I was a Boy Scout with my local troop. Often we’d go backpacking, volunteering, and have fun with other organizations who we participated with.</p>
-            <p><span class="tab"></span>I am currently a student at Rochester Institute of Technology, studying Mobile Application Development. A lot of my project work is geared around building accessible tools for persons with disabilities. I plan to graduate Spring, 2024 with my applied associates.</p>
-            <p><span class="tab"></span>I am passionate about the ideals of open-innovation/ open-source. Giving others the tools we make public, in the spirit of consideration and progress.</p>
-            <p><span class="tab"></span>Fun Fact: I have a rare dual recessive genetic disorder called Usher Syndrome. It causes progressive vision loss (Retinitis Pigmentosa), moderate/severe hearing loss, and some other phenomena. This is just a part of my life, it does not make me angry, upset, or wallow. It keeps me sane, knowing that life will always be interesting.</p>
+            <h2>Decker</h2>
+            <p> Profession: Software Developer<br>
+                Location: Southern Tier ( Binghamton, NY )<br>
+                Education: Mobile Application Development AAS - Rochester Institute of Technology<br>
+                Background: Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
+                Hobbies: Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
+                Favorite Video Games: Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
+                Passionate About: Cross-Platform Frameworks, XAML, Historical Polymaths<br>
+                Favorite Song: Don't Say It Wasn't Love by Blue October<br>
+                Favorite Movie: Blade Runner 2049<br>
+            </p>
         </div>
     </section>
     <div class="back-button">
