--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <div class="blog-post">
             <h2>Resume</h2>
-            <p>Most recent resume highlighting my education, skills, and expirience</p>
+            <p>Highlighting my education, skills, and expiriences</p>
             <a href="assets/files/Decker Ayers Resume.docx"><button class="read-button">Download</button></a>
         </div>
         <div class="blog-post">
             <h2>Contact Me</h2>
-            <p>Find out how to get in touch with me
-            <a href="contact.html"><button class="read-button">&#8250;</button></a></p>
+            <p>Find out how to get in touch with me</p>
+            <a href="contact.html"><button class="read-button">&#8250;</button></a>
         </div>
     </section>
 </body>
