--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
         
         <div class="blog-post">
             
-            <h2>Decker</h2>
+            <h2>Decker Ayers</h2>
+            <img src="assets/img/self.jpg" width="50%">
             <p> Profession: Software Developer<br>
                 Location: Southern Tier ( Binghamton, NY )<br>
                 Education: Mobile Application Development AAS - Rochester Institute of Technology<br>
