--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
         </div>
         <div class="blog-post">
         
-            <p> Profession: Software Developer<br>
-                Location: Southern Tier ( Binghamton, NY )<br>
-                Education: Mobile Application Development AAS - Rochester Institute of Technology<br>
-                Background: Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
-                Hobbies: Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
-                Favorite Video Games: Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
-                Passionate About: Cross-Platform Frameworks, XAML, Historical Polymaths<br>
-                Favorite Song: Don't Say It Wasn't Love by Blue October<br>
-                Favorite Movie: Blade Runner 2049<br>
+            <p> <em>Profession:</em> Software Developer<br>
+                <em>Location:</em> Southern Tier ( Binghamton, NY )<br>
+                <em>Education:</em> Mobile Application Development AAS - Rochester Institute of Technology<br>
+                <em>Background:</em> Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
+                <em>Hobbies:</em> Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
+                <em>Favorite Video Games:</em> Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
+                <em>Passionate About:</em> Cross-Platform Frameworks, XAML, Historical Polymaths<br>
+                <em>Favorite Song:</em> Don't Say It Wasn't Love by Blue October<br>
+                <em>Favorite Movie:</em> Blade Runner 2049<br>
             </p>
         </div>
     </section>
