--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </div>
     <section class="blog-section">
         <div class="blog-post">
-            <img src="assets/img/self.jpg" width="30%">
+            <img src="assets/img/self.jpg" width="30%" style="text-align: center;">
         </div>
         <div class="blog-post">
         
