--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
         </div>
         <div class="blog-post">
         
-            <p> <em>Profession:</em> Software Developer<br>
-                <em>Location:</em> Southern Tier ( Binghamton, NY )<br>
-                <em>Education:</em> Mobile Application Development AAS - Rochester Institute of Technology<br>
-                <em>Background:</em> Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
-                <em>Hobbies:</em> Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
-                <em>Favorite Video Games:</em> Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
-                <em>Passionate About:</em> Cross-Platform Frameworks, XAML, Historical Polymaths<br>
-                <em>Favorite Song:</em> Don't Say It Wasn't Love by Blue October<br>
-                <em>Favorite Movie:</em> Blade Runner 2049<br>
+            <p> <b>Profession:</b> Software Developer<br>
+                <b>Location:</b> Southern Tier ( Binghamton, NY )<br>
+                <b>Education:</b> Mobile Application Development AAS - Rochester Institute of Technology<br>
+                <b>Background:</b> Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
+                <b>Hobbies:</b> Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
+                <b>Favorite Video Games:</b> Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
+                <b>Passionate About:</b> Cross-Platform Frameworks, XAML, Historical Polymaths<br>
+                <b>Favorite Song:</b> Don't Say It Wasn't Love by Blue October<br>
+                <b>Favorite Movie:</b> Blade Runner 2049<br>
             </p>
         </div>
     </section>
