--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="blog-post">
             <h2>Github</h2>
             <p>This is where you can find all of my code projects</p>
-            <a href="https://github.com/ayersdecker"><button class="read-button">&#8250;</button></a>
+            <a href="https://github.com/ayersdecker"><button class="read-button">Teleport</button></a>
         </div>
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am</p>
-            <a href="about.html"><button class="read-button">&#8250;</button></a>
+            <a href="about.html"><button class="read-button">Snoop</button></a>
         </div>
         <div class="blog-post">
             <h2>Resume</h2>
@@ -30,7 +30,7 @@
         <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
-            <a href="contact.html"><button class="read-button">&#8250;</button></a>
+            <a href="contact.html"><button class="read-button">U+2709;</button></a>
         </div>
     </section>
 </body>
