--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1 id="name">Decker Ayers</h1>
     </div>
     <section class="blog-section">
-            <img src="assets/img/self.jpg" width="30%" style="text-align: center;">
+            <img src="assets/img/self.jpg" width="30%" class="center">
         <div class="blog-post">
         
             <p> <b>Profession:</b> Software Developer<br>
