--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
-            <a href="contact.html"><button class="read-button">U+2709;</button></a>
+            <a href="contact.html"><button class="read-button">&#128231;</button></a>
         </div>
     </section>
 </body>
