--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am</p>
-            <a href="about.html"><button class="read-button">Snoop</button></a>
+            <a href="about.html"><button class="read-button">Learn</button></a>
         </div>
         <div class="blog-post">
             <h2>Resume</h2>
@@ -30,7 +30,7 @@
         <div class="blog-post">
             <h2>Contact Me</h2>
             <p>Find out how to get in touch with me</p>
-            <a href="contact.html"><button class="read-button">&#128231;</button></a>
+            <a href="contact.html"><button class="read-button">&#129534;</button></a>
         </div>
     </section>
 </body>
