--- a/about.html
+++ b/about.html
@@ -10,8 +10,11 @@
     <div class="container">
         <h1 id="name">Decker Ayers</h1>
     </div>
+    <div class="container">
+        <img src="assets/img/self.jpg" width="30%" class="center">
+    </div>
     <section class="blog-section">
-            <img src="assets/img/self.jpg" width="30%" class="center">
+            
         <div class="blog-post">
         
             <p> <b>Profession:</b> Software Developer<br>
