--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1 id="name">Decker Ayers</h1>
     </div>
     <div class="container">
-        <img src="assets/img/self.jpg" width="30%" class="center">
+        <img src="assets/img/self.jpg" class="center">
     </div>
     <section class="blog-section">
             
