--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="blog-post">
             <h2>Github</h2>
             <p>This is where you can find all of my code projects</p>
-            <a href="https://github.com/ayersdecker"><button class="read-button">Teleport</button></a>
+            <a href="https://github.com/ayersdecker"><button class="read-button">&#x1f468;</button></a>
         </div>
         <div class="blog-post">
             <h2>About Me</h2>
             <p>Find out more information about who I am</p>
-            <a href="about.html"><button class="read-button">Learn</button></a>
+            <a href="about.html"><button class="read-button">&#128218;</button></a>
         </div>
         <div class="blog-post">
             <h2>Resume</h2>
