--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="blog-post">
             <h2>Github</h2>
             <p>This is where you can find all of my code projects</p>
-            <a href="https://github.com/ayersdecker"><button class="read-button">&#x1f468; &gt;</button></a>
+            <a href="https://github.com/ayersdecker"><button class="read-button">&#x1f468;&#x200d;&#x1f4bb; &gt;</button></a>
         </div>
         <div class="blog-post">
             <h2>About Me</h2>
