--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1 id="name">Decker Ayers</h1>
     </div>
     <div class="container">
-        <h1>&#x1f468;</h1>
+        <h1 style="font-size: 70;">&#x1f468;</h1>
     </div>
     <section class="blog-section">
             
