--- a/about.html
+++ b/about.html
@@ -10,13 +10,10 @@
     <div class="container">
         <h1 id="name">Decker Ayers</h1>
     </div>
-    <div class="container">
-        <h1 style="font-size: 70;">&#x1f468;</h1>
-    </div>
     <section class="blog-section">
             
         <div class="blog-post">
-        
+            <h1 style="font-size: 70;">&#x1f468;</h1><br><br>
             <p> <b>Profession:</b> Software Developer<br>
                 <b>Location:</b> Southern Tier ( Binghamton, NY )<br>
                 <b>Education:</b> Mobile Application Development AAS - Rochester Institute of Technology<br>
