Adjust Para Size

--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
     <section class="blog-section">
             
         <div class="blog-post">
-            <h1 style="font-size: 70;">&#x1f468;</h1><br><br>
             <p> <b>Profession:</b> Software Developer<br>
                 <b>Location:</b> Southern Tier ( Binghamton, NY )<br>
                 <b>Education:</b> Mobile Application Development AAS - Rochester Institute of Technology<br>
@@ -23,6 +22,7 @@
                 <b>Passionate About:</b> Cross-Platform Frameworks, XAML, Historical Polymaths<br>
                 <b>Favorite Song:</b> Don't Say It Wasn't Love by Blue October<br>
                 <b>Favorite Movie:</b> Blade Runner 2049<br>
+                <b>Favorite TV Show:</b> The Mentalist<br>
             </p>
         </div>
     </section>
