--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <a href="contact.html"><button class="read-button">&#129534; &gt;</button></a>
         </div>
 
-        <div>
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vRKIs2b8LbByBPAs1VbojHsHva73UCF_54ZocxYBk7_4oF3TRmMsz7S8nqNExYM0KfE7QP-lqf1kJzG/pub?embedded=true"></iframe>
-        </div>
+        
+            <!--<div><iframe src="https://docs.google.com/document/d/e/2PACX-1vRKIs2b8LbByBPAs1VbojHsHva73UCF_54ZocxYBk7_4oF3TRmMsz7S8nqNExYM0KfE7QP-lqf1kJzG/pub?embedded=true"></iframe></div>-->
+        
     </section>
 </body>
 </html>
