Removed .html from Index

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <div class="back-button">
-        <a href="index.html">Back</a>
+        <a href="./">Back</a>
     </div>
 </body>
 </html>
