--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
     style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; border: none;">
 
     <div class="back-button">
-        <a href="index.html">Back</a>
+        <a href="./">Back</a>
     </div>
 </body>
 </html>
