--- a/about.html
+++ b/about.html
@@ -13,17 +13,11 @@
     <section class="blog-section">
             
         <div class="blog-post">
-            <p> <b>Profession:</b> Software Developer<br>
-                <b>Location:</b> Southern Tier ( Binghamton, NY )<br>
-                <b>Education:</b> Mobile Application Development AAS - Rochester Institute of Technology<br>
-                <b>Background:</b> Lifelong Boy Scout, Soccer. Baseball, Bowling, and Innovative History Connoisseur<br>
-                <b>Hobbies:</b> Motorcycling, Hanging with my kids, Making apps, and listening to music<br>
-                <b>Favorite Video Games:</b> Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2<br>
-                <b>Passionate About:</b> Cross-Platform Frameworks, XAML, Historical Polymaths<br>
-                <b>Favorite Song:</b> Don't Say It Wasn't Love by Blue October<br>
-                <b>Favorite Movie:</b> Blade Runner 2049<br>
-                <b>Favorite TV Show:</b> The Mentalist<br>
-            </p>
+            <p>I'm a professional Software Developer based in Binghamton, New York. I hold an Associate of Applied Science (AAS) degree in Mobile Application Development from the Rochester Institute of Technology.</p>
+            <p>My background is diverse; I've been a lifelong Boy Scout, participated in sports like Soccer, Baseball, and Bowling, and I have a strong passion for history, especially the achievements of historical polymaths.</p>
+            <p>When I'm not coding, you can find me pursuing various hobbies. I enjoy motorcycling, spending quality time with my kids, creating apps, and listening to a wide range of music. I'm also an avid gamer and have a soft spot for titles like Starfield, Destiny 2, Phasmophobia, and Risk of Rain 2.</p>
+            <p>My professional interests lie in cross-platform frameworks and XAML, and I love exploring the lives of historical polymaths who made significant contributions to various fields.</p>
+            <p>One of my all-time favorite songs is "Don't Say It Wasn't Love" by Blue October, and my top movie pick is Blade Runner 2049. When it comes to TV shows, I have a particular fondness for The Mentalist.</p>
         </div>
     </section>
     <div class="back-button">
