Spelling Error Correction

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="blog-post">
             <h2>Resume</h2>
-            <p>Highlighting my education, skills, and expiriences</p>
+            <p>Highlighting my education, skills, and experiences</p>
             <a href="assets/files/Decker Ayers Resume.docx"><button class="read-button">Download</button></a>
         </div>
         <div class="blog-post">
