--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
         </div>
         
     </section>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2129408761521847"
+     crossorigin="anonymous"></script>
 </body>
 </html>
