--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Decker Ayers, Portfolio Website">
+    <meta name="google-adsense-account" content="ca-pub-2129408761521847">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Decker Ayers</title>
 </head>
