--- a/index.html
+++ b/index.html
@@ -1,41 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Decker Ayers, Portfolio Website">
-    <meta name="google-adsense-account" content="ca-pub-2129408761521847">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Decker Ayers</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Decker Ayers – Developer &amp; Creative Technologist</title>
+  <meta name="google-adsense-account" content="ca-pub-2129408761521847">
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script defer src="assets/scripts/base.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1 id="name">Decker Ayers</h1>
+  <!-- Animated background circles -->
+  <div class="background-circles">
+    <div class="circle cyan"></div>
+    <div class="circle purple reverse"></div>
+    <div class="circle pink"></div>
+    <div class="circle orange reverse"></div>
+  </div>
+
+  <!-- Mouse follower -->
+  <div id="cursor"></div>
+
+  <!-- Navigation -->
+  <nav class="nav">
+    <div class="glass-card nav-container">
+      <div class="nav-links">
+        <button onclick="scrollToSection('home')" class="glass-button">Home</button>
+        <button onclick="scrollToSection('about')" class="glass-button">About</button>
+        <button onclick="scrollToSection('projects')" class="glass-button">Projects</button>
+        <button onclick="scrollToSection('artworks')" class="glass-button">Artworks</button>
+        <button onclick="scrollToSection('contact')" class="glass-button">Contact</button>
+      </div>
     </div>
-    <section class="blog-section">
-        <div class="blog-post">
-            <h2>Github</h2>
-            <p>This is where you can find all of my code projects</p>
-            <a href="https://github.com/ayersdecker"><button class="read-button">&#x1f468;&#x200d;&#x1f4bb; &gt;</button></a>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="home" class="section hero">
+    <div class="glass-card hero-card fade-in">
+      <h1 class="gradient-text pulse-glow">Decker Ayers</h1>
+      <p class="subhead">Developer &amp; Creative Technologist</p>
+      <div class="hero-buttons">
+        <button onclick="scrollToSection('projects')" class="glass-button glow">
+          View Projects
+        </button>
+        <a href="https://www.deckerayers.com/assets/files/Decker%20Ayers%20Resume.docx" download class="glass-button glow">
+          Download Resume
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="section fade-in">
+    <div class="glass-card section-card">
+      <h2 class="gradient-text section-title">About Me</h2>
+      <div class="section-content">
+        <p>I'm a passionate developer who loves creating innovative solutions and bringing ideas to life through code. With expertise in modern web technologies, I build user‑centric applications that make a difference.</p>
+        <p>When I'm not coding, you'll find me exploring new technologies, contributing to open source, and continuously learning to stay at the forefront of tech.</p>
+        <div class="skills">
+          <span class="glass-button">JavaScript</span>
+          <span class="glass-button">TypeScript</span>
+          <span class="glass-button">React</span>
+          <span class="glass-button">Node.js</span>
+          <span class="glass-button">Python</span>
+          <span class="glass-button">CSS</span>
+          <span class="glass-button">HTML</span>
         </div>
-        <div class="blog-post">
-            <h2>About Me</h2>
-            <p>Find out more information about who I am</p>
-            <a href="about"><button class="read-button">&#128218; &gt;</button></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="section fade-in">
+    <div class="glass-card section-card">
+      <h2 class="gradient-text section-title">Projects</h2>
+      <p class="section-subtitle">Explore my latest work and creative projects on GitHub</p>
+      <div class="projects-grid">
+        <a href="https://github.com/ayersdecker" target="_blank" class="project-card">
+          <div class="icon">🐙</div>
+          <h3>GitHub Portfolio</h3>
+          <p>All my code projects, contributions, and open‑source work</p>
+        </a>
+        <div class="project-card">
+          <div class="icon">💻</div>
+          <h3>Loficus Loftt</h3>
+          <p>Currently in Development</p>
         </div>
-        <div class="blog-post">
-            <h2>Resume</h2>
-            <p>Highlighting my education, skills, and experiences</p>
-            <a href="assets/files/Decker Ayers Resume.docx"><button class="read-button">Download</button></a>
+        <div class="project-card">
+          <div class="icon">🎨</div>
+          <h3>Creative Projects</h3>
+          <p>Showcase of some of my design works. Coming Soon</p>
         </div>
-        <div class="blog-post">
-            <h2>Contact Me</h2>
-            <p>Find out how to get in touch with me</p>
-            <a href="contact"><button class="read-button">&#129534; &gt;</button></a>
-        </div>
-        
-    </section>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2129408761521847"
-     crossorigin="anonymous"></script>
+      </div>
+    </div>
+  </section>
+
+  <!-- Artworks Section -->
+  <section id="artworks" class="section fade-in">
+    <div class="glass-card section-card">
+      <h2 class="gradient-text section-title">Artworks</h2>
+      <p class="section-subtitle">Digital artworks and visual experiments</p>
+      <div class="carousel">
+        <button id="prev" class="carousel-button">❮</button>
+        <img id="carousel-image" src="art1.jpg" alt="Artwork">
+        <button id="next" class="carousel-button">❯</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section fade-in">
+    <div class="glass-card section-card text-center">
+      <h2 class="gradient-text section-title">Get In Touch</h2>
+      <p>Ready to collaborate on your next project? Let's create something amazing together.</p>
+      <a href="https://www.deckerayers.com/contact" target="_blank" class="glass-button glow">Contact Me</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer fade-in">
+    <div class="glass-card footer-card">
+      <p>© 2025 Decker Ayers. Built with passion and glass morphism.</p>
+    </div>
+  </footer>
 </body>
 </html>
