--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Decker Ayers</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact – Decker Ayers</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    <div class="container">
-        
-        <h1 id="name">Contact Me</h1>
-    </div>
-    <section class="contact-section">
-        <div class="contact-form">
-            <h2>Send a Message</h2>
-            <form
-                action="https://formspree.io/f/xyyqepya"
-                method="POST">
-                <label>
-                    Your email:
-                    <input type="email" name="email">
-                </label>
-                <label>
-                    Your message:
-                    <textarea name="message"></textarea>
-                </label>
-                <button class="submit-button" type="submit">Send</button>
-            </form>
-        </div>
+  <main>
+    <section class="section" id="contact">
+      <a href="index.html" style="font-family:Tahoma,sans-serif;color:#000;font-size:1.25rem;display:inline-block;margin-bottom:2rem;margin-top:0.5rem;">← back</a>
+    <section class="section" id="contact">
+      <h1>contact me</h1>
+      <p>Ready to collaborate or have a question? Fill out the form below and I'll get back to you soon.</p>
+      <form class="contact-form" action="https://formspree.io/f/xyyqepya" method="POST">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+        <button type="submit">Send</button>
+      </form>
     </section>
-    <div class="back-button">
-        <a href="./">Back</a>
-    </div>
+  </main>
 </body>
 </html>
