--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <section class="section" id="contact">
-      <a href="index.html" style="font-family:Tahoma,sans-serif;color:#000;font-size:1.25rem;display:inline-block;margin-bottom:2rem;margin-top:0.5rem;">← back</a>
+      <a href="/" style="font-family:Tahoma,sans-serif;color:#000;font-size:1.25rem;display:inline-block;margin-bottom:2rem;margin-top:0.5rem;">← back</a>
       <h1>contact me</h1>
       <form class="contact-form" action="https://formspree.io/f/xyyqepya" method="POST">
         <label for="name">Name</label>
