--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Decker Ayers</title>
   <meta name="google-adsense-account" content="ca-pub-2129408761521847">
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/ny-2026.css" />
   <script defer src="assets/scripts/base.js"></script>
 </head>
-<body>
+<body class="ny-2026">
   <main>
     <section class="section" id="home">
       <h1>Decker Ayers</h1>
