--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Decker Ayers</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <script defer src="assets/scripts/base.js"></script>
 </head>
 <body>
   <main>
