--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p><a href="contact.html">Contact Me</a></p>
     </section>
     <footer class="section">
-      <p>© 2025 Decker Ayers</p>
+      <p>© 2026 🍍 Decker Ayers</p>
     </footer>
   </main>
 </body>
