--- a/index.html
+++ b/index.html
@@ -6,34 +6,8 @@
   <title>Decker Ayers</title>
   <meta name="google-adsense-account" content="ca-pub-2129408761521847">
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/woods.css" />
-  <script defer src="assets/scripts/base.js"></script>
 </head>
 <body>
-  <div class="mountain-bg" aria-hidden="true" title="Mountainscape">
-    <!-- Layered mountains SVG (subtle, decorative) -->
-    <svg viewBox="0 0 1200 320" preserveAspectRatio="xMidYMax meet" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
-      <defs>
-        <linearGradient id="m1" x1="0" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#eaf5ea" />
-          <stop offset="100%" stop-color="#dfeee0" />
-        </linearGradient>
-        <linearGradient id="m2" x1="0" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#dfeee0" />
-          <stop offset="100%" stop-color="#cfe6d1" />
-        </linearGradient>
-      </defs>
-      <g class="mountain-layer layer-back" transform="translate(0,30)">
-        <path d="M0,220 C150,120 350,260 520,180 C690,100 880,220 1200,160 L1200,320 L0,320 Z" fill="url(#m1)" opacity="0.9"/>
-      </g>
-      <g class="mountain-layer layer-mid" transform="translate(0,50)">
-        <path d="M0,240 C120,160 300,200 460,140 C620,80 820,200 1200,140 L1200,320 L0,320 Z" fill="url(#m2)" opacity="0.85"/>
-      </g>
-      <g class="mountain-layer layer-front" transform="translate(0,80)">
-        <path d="M0,280 C160,200 320,240 520,180 C720,120 920,240 1200,180 L1200,320 L0,320 Z" fill="rgba(47,111,68,0.06)" opacity="0.95"/>
-      </g>
-    </svg>
-  </div>
   <main>
     <section class="section" id="home">
       <h1>Decker Ayers</h1>
@@ -51,14 +25,14 @@
     </section>
     <section class="section" id="projects">
       <h2>Featured Projects</h2>
-      <p>Loficus – Desktop lofi music streaming app. Designed for productivity and relaxation, with a custom UI and curated playlists.</p>
-      <p>TP-Link Cloud Console – A tool that allows users to control TP-Link devices (unofficially) from a simple interface. Built for research and automation.</p>
-      <p>Solve.AI – Mobile app using OpenAI GPT-4 to solve problems and answer questions. Created as a capstone project for college.</p>
-      <p>ReadyWaters – Capstone project providing water weather information for Rochester, NY. Combines real-time data and a user-friendly interface.</p>
-      <p>FlappyTiger – Flappy Bird clone in Unity WebGL. Playable directly in the browser, demonstrating game development and Unity skills.</p>
-      <p>ClearCaptions – Simple website providing live captions for accessibility. Designed to help users with hearing or processing difficulties.</p>
-      <p>ASL.ML – Research project using Google MediaPipe to track pose and hand landmarks for American Sign Language recognition and learning.</p>
-      <p>Drawing – Simple drawing app for creative expression and note-taking, built for ease of use and accessibility.</p>
+      <p><a href="https://github.com/ayersdecker/Loficus" target="_blank">Loficus</a> – Desktop lofi music streaming app. Designed for productivity and relaxation, with a custom UI and curated playlists.</p>
+      <p><a href="https://github.com/ayersdecker/TPLinkControl-Console" target="_blank">TP-Link Cloud Console</a> – A tool that allows users to control TP-Link devices (unofficially) from a simple interface. Built for research and automation.</p>
+      <p><a href="https://github.com/ayersdecker/Solve.AI-App" target="_blank">Solve.AI</a> – Mobile app using OpenAI GPT-4 to solve problems and answer questions. Created as a capstone project for college.</p>
+      <p><a href="https://github.com/ayersdecker/WaterReady-App" target="_blank">ReadyWaters</a> – Capstone project providing water weather information for Rochester, NY. Combines real-time data and a user-friendly interface.</p>
+      <p><a href="https://github.com/ayersdecker/FlappyTiger-Embed" target="_blank">FlappyTiger</a> – Flappy Bird clone in Unity WebGL. Playable directly in the browser, demonstrating game development and Unity skills.</p>
+      <p><a href="https://github.com/ayersdecker/ClearCaptions-Site" target="_blank">ClearCaptions</a> – Simple website providing live captions for accessibility. Designed to help users with hearing or processing difficulties.</p>
+      <p><a href="https://github.com/ayersdecker/ASLML-Python" target="_blank">ASL.ML</a> – Research project using Google MediaPipe to track pose and hand landmarks for American Sign Language recognition and learning.</p>
+      <p><a href="https://github.com/ayersdecker/Drawing-App" target="_blank">Drawing</a> – Simple drawing app for creative expression and note-taking, built for ease of use and accessibility.</p>
     </section>
     <section class="section" id="contact">
       <h2>Get In Touch</h2>
@@ -70,6 +44,5 @@
       <p>© 2026 Decker Ayers</p>
     </footer>
   </main>
-  <div id="hiker" aria-hidden="true" title="Hiker" role="presentation">🥾</div>
 </body>
 </html>
