Correction to order

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section class="section" id="about">
       <h2>About Me</h2>
-      <p>I'm Decker Ayers — a developer, father, and lifelong problem solver with a passion for building accessible, meaningful technology. As an Ex-Boyscout and someone living with Usher syndrome, I’ve always embraced challenges with resilience, creativity, and a commitment to helping others.</p>
+      <p>I'm Decker Ayers — father of 3, a developer, and lifelong problem solver with a passion for building accessible, meaningful technology. As an Ex-Boyscout and someone living with Usher syndrome, I've always embraced challenges with resilience, creativity, and a commitment to helping others.</p>
       <p>My journey into tech started with a simple curiosity and grew into a career focused on turning ideas into polished digital experiences. From mobile apps to full-scale web platforms, I specialize in crafting intuitive, user-focused solutions using modern tools and frameworks.</p>
       <p>I believe technology should empower everyone. Whether I'm mentoring, contributing to open source, or exploring new ideas, I'm driven by a desire to innovate with purpose — especially in ways that enhance inclusion and usability.</p>
       <p>When I'm not coding, you'll find me hiking in Upstate New York, playing video games with my kids, or listening to some Lofi channel while I work on personal projects.</p>
